--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+body {
+  background-color: rgb(212, 203, 203);
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+}
