--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -55,3 +55,16 @@
   margin-top:10px;
   border-radius: 10px 10px 0px 0px;
 }
+@media only screen and (max-width: 600px) {
+  .exampleContainer {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-radius: 10px !important;
+  }
+  .message-box {
+    display: flex;
+    overflow-y: scroll;
+    background: rgb(245, 245, 245);
+    height: 93vh;
+  }
+}
